@@ -9,8 +9,8 @@ import de.qabel.core.exceptions.QblDropPayloadSizeException;
 import org.junit.*;
 
 import java.io.File;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.security.InvalidKeyException;
 import java.util.HashSet;
 
@@ -35,9 +35,9 @@ public class DropActorTest {
         	this.content = content;
         }
     }
-    
+
     @Before
-    public void setup() throws MalformedURLException, QblDropInvalidURL, InvalidKeyException, InterruptedException, InstantiationException, IllegalAccessException {
+    public void setup() throws URISyntaxException, QblDropInvalidURL, InvalidKeyException, InterruptedException, InstantiationException, IllegalAccessException {
 		Persistence<String> persistence = new SQLitePersistence(DB_NAME, encryptionPassword);
 		resourceActor = new ResourceActor(persistence, EventEmitter.getDefault());
 		resourceActorThread = new Thread(resourceActor);
@@ -61,8 +61,8 @@ public class DropActorTest {
 
         DropServers servers = new DropServers();
 
-        DropServer iDropServer = new DropServer(new URL(iUrl), null, true);
-        DropServer cDropServer = new DropServer(new URL(cUrl), null, true);
+        DropServer iDropServer = new DropServer(new URI(iUrl), null, true);
+        DropServer cDropServer = new DropServer(new URI(cUrl), null, true);
         servers.put(iDropServer);
         servers.put(cDropServer);
 
@@ -81,7 +81,7 @@ public class DropActorTest {
     }
 
     @Test
-    public void sendAndForgetTest() throws MalformedURLException, QblDropInvalidURL, QblDropPayloadSizeException, InterruptedException {
+    public void sendAndForgetTest() throws QblDropInvalidURL, QblDropPayloadSizeException, InterruptedException {
         TestMessage m = new TestMessage("baz");
 
         DropMessage<TestMessage> dm = new DropMessage<TestMessage>(sender, m);
@@ -95,7 +95,7 @@ public class DropActorTest {
     }
 
     @Test
-    public void sendAndForgetAutoTest() throws InvalidKeyException, MalformedURLException, QblDropInvalidURL, QblDropPayloadSizeException, InterruptedException {
+    public void sendAndForgetAutoTest() throws InvalidKeyException, QblDropInvalidURL, QblDropPayloadSizeException, InterruptedException {
         TestMessage m = new TestMessage("baz");
 
         DropActor.send(emitter, m, recipientContact);
@@ -104,7 +104,7 @@ public class DropActorTest {
     }
 
     @Test
-    public void sendTestSingle() throws InvalidKeyException, MalformedURLException, QblDropInvalidURL, QblDropPayloadSizeException, InterruptedException {
+    public void sendTestSingle() throws InvalidKeyException, QblDropInvalidURL, QblDropPayloadSizeException, InterruptedException {
         TestMessage m = new TestMessage("baz");
 
         DropMessage<TestMessage> dm = new DropMessage<TestMessage>(sender, m);
@@ -113,7 +113,7 @@ public class DropActorTest {
         retrieveTest();
     }
 
-    public void retrieveTest() throws MalformedURLException, QblDropInvalidURL, InterruptedException {
+    public void retrieveTest() throws QblDropInvalidURL, InterruptedException {
 		DropMessage<?> dm = controller.retrieve();
 		Assert.assertEquals(sender.getKeyIdentifier(), dm.getSender().getKeyIdentifier());
     }
